# MindGarden

./: .env.example  README.md  docker-compose.yml  main.py  pyproject.toml
.cursor/rules/: mindgarden-dev-plan.mdc  mindgarden-overview.mdc  mindgarden-phase1-dev-plan.mdc
docker/: Dockerfile
mindgarden/: __init__.py
mindgarden/agent/: __init__.py  agent.py
mindgarden/cli/: __init__.py  main.py
mindgarden/config/: __init__.py  settings.py
mindgarden/core/: __init__.py  logging.py
mindgarden/memory/: __init__.py  memory_manager.py
mindgarden/memory/db/: __init__.py  db_manager.py  memory_operations.py
mindgarden/memory/entity/: __init__.py  entity_processor.py
mindgarden/memory/models/: __init__.py  document.py  entity.py
mindgarden/tools/: __init__.py
tests/: test_agent.py  test_memory.py
